setup scss added bg picture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<div id="root" class="container">
+    <app-navigation></app-navigation>
+    <div id="content">
+        <router-outlet></router-outlet>
+    </div>
+</div>
