--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-size: 50%;
+    background-image: url('./assets/bg-pattern-05.jpg');
+    background-repeat: repeat;
+}
