--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,6 +3,8 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
             <li [class.active]="activeItem == 'Home'" (click)="setActiveItem('Home')"><a routerLink="/">Home</a></li>
+            <li [class.active]="activeItem == 'Browse'" (click)="setActiveItem('Browse')"><a routerLink="/">Browse</a></li>
+            <li [class.active]="activeItem == 'Create'" (click)="setActiveItem('Create')"><a routerLink="/">Create</a></li>           
         </ul>
     </div>
     <!-- /.navbar-collapse -->
