--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
 div#content {
-  background-color: #333333;
+  background-color: rgba(0, 0, 0, 0.33);
+  box-shadow: 0 5px 20px black;
+  padding: 25px;
+  color: white;
+  height: 50%;
 }
