--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,8 +1,10 @@
 nav {
+  padding-left: 10px;
   border: none;
   box-shadow: 0 5px 25px #000000;
   background-color: rgba(0, 0, 0, 0.33);
   text-align: center;
+  
   li.active>a {
     background-color: rgba(133, 33, 33, 0.33) !important;
     box-shadow: 0 1px 15px #000000;
