--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,19 @@
       <li [class.active]="activeItem == 'Browse'" (click)="setActiveItem('Browse')"><a routerLink="/">Browse</a></li>
       <li [class.active]="activeItem == 'Create'" (click)="setActiveItem('Create')"><a routerLink="/">Create</a></li>
     </ul>
-    <h1 class="app-heading" *ngIf="hasLoggedUser == false">DREAMSTIME</h1>
+    <div class="row" *ngIf="hasLoggedUser == false">
+      <h1>
+        <a routerLink="/" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
+          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+        </a>
+      </h1>
+      <h1 class="app-heading col-xs-10">DREAMSTIME</h1>
+      <h1>
+        <a routerLink="/" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
+          <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+        </a>
+      </h1>
+    </div>
   </div>
   <!-- /.navbar-collapse -->
 </nav>
