--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,14 +1,22 @@
 nav {
-  margin-top: 1%;
+  margin-top: 1.5%;
   padding-left: 10px;
   border: none;
   box-shadow: 0 5px 25px #000000;
   background-color: rgba(0, 0, 0, 0.33);
   text-align: center;
+  .btn-default {
+    color: rgba(225, 225, 225, 0.77);
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    margin-top: 0px;   
+  }
   h1.app-heading {
     color: rgba(225, 225, 225, 0.77);
     font-family: 'Verdana, Geneva, sans-serif';
     letter-spacing: 0.77em;
+    margin-top: 0px;
   }
   li.active>a {
     background-color: rgba(51, 51, 51, 0.33) !important;
