--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -23,6 +23,10 @@ nav {
     letter-spacing: 1em;
     margin-top: 0px;
   }
+  a.navbar-brand {
+    font-family: planer;
+    font-size: 22px;
+  }
   li>a {
     font-family: planer;
     font-size: 20px;
