--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -6,6 +6,7 @@
 nav {
   margin-top: 1.5%;
   padding-left: 10px;
+  padding-right: 25px;
   border: none;
   box-shadow: 0 5px 25px #000000;
   background-color: rgba(0, 0, 0, 0.33);
@@ -31,7 +32,8 @@ nav {
     font-family: planer;
     font-size: 20px;
   }
-  li.active>a {
+  li.active>a,
+  li.open>a {
     background-color: rgba(51, 51, 51, 0.33) !important;
     box-shadow: 0 1px 15px #000000;
     font-family: planer;
