--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -1,3 +1,21 @@
-<p>
-  login works!
-</p>
+<h2>Login Form</h2>
+<form *ngIf="isLoading === false" #registerForm="ngForm" (ngSubmit)="onSubmit(); registerForm.reset()">
+  <div class="form-group">
+    <label> 
+      <span>Username: </span>
+      <input class="form-control" type="text" name="username" [(ngModel)]="user.username" placeholder="Enter your username" required minlength="3" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
+    </label>
+  </div>
+  <div class="form-group">
+    <label> 
+      <span>Password: </span>
+      <input class="form-control" type="password" name="password" [(ngModel)]="user.password" placeholder="Enter your username" required minlength="3" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
+    </label>
+  </div>
+  <div class="form-group">
+    <label>
+      <button class="form-control" type="submit">Register</button>
+    </label>
+  </div>
+</form>
+<img *ngIf="isLoading === true" id="loading" src="../../../assets/load.gif" alt="Be patient..." width="50px" />
