added login routes

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -50,7 +50,7 @@
       </h1>
       <h1 class="app-heading col-xs-10">DREAMSTIME</h1>
       <h1>
-        <a routerLink="/" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
+        <a routerLink="/register" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
           <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
         </a>
       </h1>
