--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -19,3 +19,34 @@
   </div>
 </form>
 <img *ngIf="isLoading === true" id="loading" src="../../../assets/load.gif" alt="Be patient..." width="50px" />
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li *ngFor="let img of images; let i = index" data-target="#carousel-example-generic" data-slide-to="0" [class.active]="i===1"></li>
+    <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div *ngFor="let img of images; let i = index" class="item" [class.active]="i===1">
+      <img [src]="img" alt="slide">
+    </div>
+    <!--<div class="item active">
+      <img src="https://www.smashingmagazine.com/wp-content/uploads/2015/06/10-dithering-opt.jpg" alt="First slide">
+    </div>
+    <div class="item">
+      <img src="https://c1.staticflickr.com/7/6107/6381966401_032df5fe1e_b.jpg" alt="Second slide">
+    </div>
+    <div class="item">
+      <img src="https://s3-us-west-1.amazonaws.com/powr/defaults/image-slider2.jpg" alt="Third slide">
+    </div>-->
+  </div>
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="icon-prev" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="icon-next" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
