--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <section id="header">
   <img src="../../assets/home-bg6.jpg" alt="logo" width="100%">
-  <a routerLink="mock"  class="btn <btn-warning></btn-warning>">Click FFS</a>
+  <a routerLink="gallery/5"  class="btn <btn-warning></btn-warning>">Click FFS</a>
 </section>
