--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -26,7 +26,7 @@
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
           <li role="separator" class="divider"></li>
-          <li><a href="#">Separated link</a></li>
+          <li><a routerLink="logout">Logout</a></li>
         </ul>
       </li>
     </ul>
@@ -50,7 +50,7 @@
       </h1>
       <h1 class="app-heading col-xs-10">DREAMSTIME</h1>
       <h1>
-        <a routerLink="/register" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
+        <a routerLink="/login" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
           <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
         </a>
       </h1>
