--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background-size: 100%;
-  background-image: url('./assets/bg-pattern-07.jpg');
+  background-image: url('./assets/bg-pattern-08.png');
   background-repeat: repeat;
 }
