--- a/src/app/users/login/login.component.scss
+++ b/src/app/users/login/login.component.scss
@@ -1,5 +1,24 @@
+.login-wrapper {
+  text-align: center;
+}
+
 input {
+  color: white;
   background-color: rgba(0, 0, 0, 0.77);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  &.ng-valid {
+    border-color: #3c763d;
+  }
+}
+
+.invalid-input-msg {
+  padding: 10px 7.5px;
+  font-size: 1.2rem;
+  color: #FFFEFE;
+  background-color: #F55145;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 #loading {
