--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 div#content {
+  min-height: 60vh;
+  box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.33);
   box-shadow: 0 5px 20px black;
-  padding: 25px;
   color: white;
-  height: 50%;
 }
