toastr notification service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div id="root" class="container">
     <app-navigation></app-navigation>
+    <app-toastr-notifications-handler></app-toastr-notifications-handler>
     <div id="content">
         <router-outlet></router-outlet>
     </div>
