--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -10,14 +10,13 @@
       </div>
       <div class="form-group">
         <label> 
-      <input #ngPass="ngModel" class="form-control" type="password" name="password" [(ngModel)]="user.password" placeholder="Enter your password" required minlength="6" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
-      <div class="invalid-input-msg animated jello" [hidden]="ngPass.valid || ngPass.untouched">Your password must be between</div>
-    </label>
+          <input #ngPass="ngModel" class="form-control" type="password" name="password" [(ngModel)]="user.password" placeholder="Enter your password" required minlength="6" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
+          <div class="invalid-input-msg animated jello" [hidden]="ngPass.valid || ngPass.untouched">Your password must be between</div>
+        </label>
       </div>
       <div class="form-group">
-        <label>
-      <button class="btn btn-success" [disabled]="ngPass.invalid || ngName.invalid" type="submit">Submit</button>
-    </label>
+        <button class="btn btn-success" [disabled]="ngPass.invalid || ngName.invalid" type="submit">Submit</button>
+        <a routerLink='/register' class="btn btn-primary">Register</a>
       </div>
     </form>
     <img *ngIf="isLoading === true" id="loading" src="../../../assets/load.gif" alt="Be patient..." width="50px" />
