displaying profile image

--- a/src/app/users/register/register.component.html
+++ b/src/app/users/register/register.component.html
@@ -1,5 +1,5 @@
 <h2>Registration Form</h2>
-<form *ngIf="isLoading === false" #registerForm="ngForm" (ngSubmit)="onSubmit(); registerForm.reset()">
+<form *ngIf="isLoading === false" #registerForm="ngForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label> 
       <span>Username: </span>
