fixed register form names

--- a/src/app/users/register/register.component.html
+++ b/src/app/users/register/register.component.html
@@ -21,13 +21,13 @@
   <div class="form-group">
     <label> 
       <span>Last Name: </span>
-      <input class="form-control" type="text" name="Last Name" [(ngModel)]="user.lastName" placeholder="Enter your last name" minlength="3" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
+      <input class="form-control" type="text" name="lastName" [(ngModel)]="user.lastName" placeholder="Enter your last name" minlength="3" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
     </label>
   </div>
   <div class="form-group">
     <label> 
       <span>Age: </span>
-      <input class="form-control" type="number" name="Last Name" [(ngModel)]="user.age" placeholder="Enter your age" min="0" max="120" required>
+      <input class="form-control" type="number" name="age" [(ngModel)]="user.age" placeholder="Enter your age" min="0" max="120" required>
     </label>
   </div>
   <div class="form-group">
