added links to favorites nad listed items in profile page

--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -34,5 +34,19 @@
           </div>
         </div>
       </li>
+      <li class="list-group-item">
+        <div class="row">
+          <div class="column-left col-xs-6 text-left">
+            <a routerLink="favorites" class="btn btn-default">
+              View Favorites
+            </a>
+          </div>
+          <div class="column-right col-xs-6 text-right">
+            <a routerLink="listed-items" class="btn btn-default">
+              View Listed Items
+            </a>
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
