update styles for buttons in profile page

--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -34,16 +34,16 @@
           </div>
         </div>
       </li>
-      <li class="list-group-item">
+      <li class="list-group-item no-shadow row">
         <div class="row">
           <div class="column-left col-xs-6 text-left">
-            <a routerLink="favorites" class="btn btn-default">
-              View Favorites
+            <a appNavigationHover routerLink="/favorites" class="btn btn-default col-xs-12">
+              <span>View Favorites</span>
             </a>
           </div>
           <div class="column-right col-xs-6 text-right">
-            <a routerLink="listed-items" class="btn btn-default">
-              View Listed Items
+            <a appNavigationHover routerLink="/listed-items" class="btn btn-default col-xs-12">
+              <span>View Listed Items</span>
             </a>
           </div>
         </div>
