--- a/src/app/users/profile/profile.component.scss
+++ b/src/app/users/profile/profile.component.scss
@@ -23,6 +23,7 @@ img {
       background-color: transparent;
       color: rgba(225, 225, 225, 0.77);
       border: 1px solid rgba(225, 225, 225, 0.77);
+      border-radius: 0px;
       box-shadow: 0 5px 20px black;
       overflow: hidden;
       &:hover {
