--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,19 @@ body {
   background-image: url('./assets/bg-pattern-11.png');
   background-repeat: repeat;
 }
+
+div#content {
+  padding: 25px;
+  min-height: 60vh;
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.33);
+  box-shadow: 0 5px 20px black;
+  color: rgba(225, 225, 225, 0.77);
+}
+
+#component-header {
+  margin: 0;
+  padding: 2vh 0;
+  color: #e6e6e6;
+  background-color: #848484;
+}
