toastr notifications added

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-image: url('./assets/bg-pattern-11.png');
   background-repeat: repeat;
@@ -8,15 +12,15 @@ body {
 div#content {
   padding: 25px;
   min-height: 60vh;
-  box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.33);
   box-shadow: 0 5px 20px black;
   color: rgba(225, 225, 225, 0.77);
 }
 
 #component-header {
-  margin: 0;
+  margin: -25px -25px 10px -25px;
   padding: 2vh 0;
+  text-align: center;
   color: #e6e6e6;
   background-color: #848484;
 }
