add listing html updated

--- a/src/app/add-listing/add-listing.component.html
+++ b/src/app/add-listing/add-listing.component.html
@@ -1,8 +1,45 @@
 <div class="submit-wrapper">
   <h2 id="component-header">Submit Listing</h2>
   <div class="inner-wrapper">
-    <form *ngIf="!isLoading" #registerForm="ngForm" (ngSubmit)="onSubmit(); registerForm.reset()">
-      
+    <form *ngIf="!isLoading" #submitForm="ngForm" (ngSubmit)="onSubmit(); submitForm.reset()">
+      <div class="form-group">
+        <label>
+          <input type="text" #ngMake="ngModel" class="form-control" name="make" [(ngModel)]="itemListing.make" placeholder="Make">
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="text" #ngModel="ngModel" class="form-control" name="model" [(ngModel)]="itemListing.model" placeholder="Model">
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="text" #ngYear="ngModel" class="form-control" name="year" [(ngModel)]="itemListing.year" placeholder="Year">
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="text" #ngPrice="ngModel" class="form-control" name="price" [(ngModel)]="itemListing.price" placeholder="Price">
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="text" #ngEnginePower="ngModel" class="form-control" name="enginePower" [(ngModel)]="itemListing.enginePower" placeholder="Engine Power">
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="text" #ngExteriorColor="ngModel" class="form-control" name="exteriorColor" [(ngModel)]="itemListing.exteriorColor" placeholder="Exterior Color">
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="text" #InteriorColor="ngModel" class="form-control" name="interiorColor" [(ngModel)]="itemListing.interiorColor" placeholder="Interior Color">
+        </label>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-success">Submit</button>
+      </div>
     </form>
   </div>
 </div>
