--- a/src/app/add-listing/add-listing.component.html
+++ b/src/app/add-listing/add-listing.component.html
@@ -41,5 +41,6 @@
         <button type="submit" class="btn btn-success">Submit</button>
       </div>
     </form>
+    <textarea name="" id="" cols="30" rows="10">{{itemListing.make}} {{itemListing.price}}</textarea>
   </div>
 </div>
