--- a/src/app/users/login/login.component.scss
+++ b/src/app/users/login/login.component.scss
@@ -11,7 +11,7 @@
 
 input {
   color: white;
-  background-color: rgba(0, 0, 0, 0.77);
+  background-color: #2f2f2f;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   &.ng-valid.ng-touched {
