--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -15,7 +15,7 @@
     <ul class="nav navbar-nav">
       <li appNavigationHover [class.active]="activeItem === 'Home'" (click)="setActiveItem('Home')"><a routerLink="/">Home</a></li>
       <li appNavigationHover [class.active]="activeItem === 'Gallery'" (click)="setActiveItem('Gallery')"><a routerLink="/">Gallery</a></li>
-      <li appNavigationHover [class.active]="activeItem === 'Create'" (click)="setActiveItem('Create')"><a routerLink="/">Create</a></li>
+      <li appNavigationHover [class.active]="activeItem === 'Create'" (click)="setActiveItem('Create')"><a routerLink="/submit">Create</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
