--- a/src/app/add-listing/add-listing.component.html
+++ b/src/app/add-listing/add-listing.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="form-group">
         <label>
-          <input type="text" #ngPrice="ngModel" class="form-control" name="price" [(ngModel)]="itemListing.price" placeholder="Price">
+          <input appFormDefaultValue type="text" #ngPrice="ngModel" class="form-control" name="price" [(ngModel)]="itemListing.price" placeholder="Price">
         </label>
       </div>
       <div class="form-group">
