lil change in item-detail page

--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -1,5 +1,9 @@
-.gallery-item{
+.gallery-item {
     min-width: 300px;
     max-width: 500px;
     float:left;
+
+    a {
+        text-align: center;
+    }
 }
