--- a/src/app/items/single-item/single-item.component.html
+++ b/src/app/items/single-item/single-item.component.html
@@ -6,4 +6,12 @@
     <h3>Exterior Color: {{this.item.exteriorColor}}</h3>
     <h3>Interior Color: {{this.item.interiorColor}}</h3>
     <h3>Price: ${{this.item.price}}</h3>
+
+    <!--TODO add right update link when ready-->
+
+    <a *ngIf="this.item.isOwner" class="btn btn-primary" routerLink="/gallery/{{this.item._id}}">Update</a>
+
+    <!--TODO add right make offer link when ready-->
+
+    <a *ngIf="!this.item.isOwner" class="btn btn-primary" routerLink="/gallery/{{this.item._id}}">Make Offer</a>
 </div>
