--- a/src/app/add-listing/add-listing.component.html
+++ b/src/app/add-listing/add-listing.component.html
@@ -38,9 +38,13 @@
         </label>
       </div>
       <div class="form-group">
+        <label>
+            <input type="file" name="displayImage">
+        </label>
+      </div>
+      <div class="form-group">
         <button type="submit" class="btn btn-success">Submit</button>
       </div>
     </form>
-    <textarea name="" id="" cols="30" rows="10">{{itemListing.make}} {{itemListing.price}}</textarea>
   </div>
 </div>
