--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  background-image: url('./assets/bg-pattern-11.png');
-  background-repeat: repeat;
+  /*background-image: url('./assets/bg-pattern-11.png');*/
+  /*background-repeat: repeat;*/
+  background-color: #333333 !important;
 }
 
 div#content {
